[package]
name = "nabu"
version = "0.1.0"
authors = ["DCjanus <DCjanus@dcjanus.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7"

chrono = "0.4"
reqwest = "0.9"
failure = "0.1"
failure_derive = "0.1"
flexi_logger = "0.11"
lazy_static = "1"
log = "0.4"

serde = { version = "1", features = ["derive"] }
serde_qs = "0.4"
serde_json = "1"

postgres = { version = "0.15", features = ["with-serde_json", "with-chrono"] }
r2d2 = "0.8"
r2d2_postgres = "0.14"

atom_syndication = { git = "https://github.com/DCjanus/atom_for_nabu.git", features = ["with-serde"] }
