[package]
name = "nabu"
version = "0.1.0"
authors = ["DCjanus <DCjanus@dcjanus.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7.19"

chrono = "0.4.6"
reqwest = "0.9.17"
failure = "0.1.5"
failure_derive = "0.1.5"
flexi_logger = "0.12.0"
lazy_static = "1.3.0"
log = "0.4.6"

serde = { version = "1.0.91", features = ["derive"] }
serde_qs = "0.4.6"
serde_json = "1.0.39"

postgres = { version = "0.15.2", features = ["with-serde_json", "with-chrono"] }
r2d2 = "0.8.4"
r2d2_postgres = "0.14.0"

atom_syndication = { git = "https://github.com/DCjanus/atom_for_nabu.git", features = ["with-serde"] }
