[package]
name = "nabu"
version = "0.2.0"
authors = ["DCjanus <DCjanus@dcjanus.com>"]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.1"
anyhow = "1.0.38"
clap = "3.0.0-beta.2"
config = "0.10.1"
once_cell = "1.5.2"
reqwest = { version = "0.11.0", default-features = false ,features = ["rustls-tls"] }
serde = "1.0.119"
serde_json = "1.0.61"
tokio = { version = "1.0.2", features = ["full"] }
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
